# network-monitor

./: README.md
LAN/: Cargo.toml
LAN/src/: main.rs
LAN/systemd/: network-monitor.service
WAN/html/: index.html
WAN/nginx/: ping.conf
client/: Cargo.toml  network-monitor.service
client/src/: config.rs  main.rs
client/systemd/: network-monitor.service
server/: index.html  ping.conf
server-files/: index.html
server/html/: index.html
server/html/ping/: index.html
server/nginx/: ping.conf
