[package]
name = "network-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
byteorder = "1.4.3"
chrono = "0.4"
dns-lookup = "1.0.8"
libc = "0.2.124"
parse_duration = "2.1.1"
rand = "0.8.5"
socket2 = { version = "0.4.4", features = ["all"] }
